--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,3 +122,87 @@
 .container {
   @apply max-w-7xl mx-auto;
 }
+
+/* page banner section */
+.pg_header {
+  position: relative;
+  z-index: 99999999;
+}
+.single_shape {
+  position: absolute;
+  z-index: 0;
+}
+
+.shp1 {
+  mix-blend-mode: multiply;
+  top: 0;
+  right: 0;
+}
+
+.shp2 {
+  bottom: 0;
+  left: 0;
+}
+.shp3 {
+  bottom: 0;
+  left: 0;
+}
+.ttl::before {
+  background: linear-gradient(270deg, #3f5af3 0%, transparent 100%);
+  content: "";
+  width: 100%;
+  height: 76%;
+  position: absolute;
+  top: 15%;
+  right: 0;
+  z-index: -1;
+  opacity: 0.95;
+}
+
+/* about page design */
+.img1 {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  max-width: 430px;
+  width: 100%;
+  height: 480px;
+}
+.image_2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  max-width: 300px;
+  width: 100%;
+  height: 390px;
+}
+.img2 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-top: 10px solid #02050a;
+  border-left: 10px solid #02050a;
+}
+.sb_head {
+  transform: translate(50%, 16%);
+}
+
+.sb_head::before {
+  content: "";
+  opacity: 1;
+  -o-transition: all 0.3s ease-in-out;
+  background: linear-gradient(
+    270deg,
+    rgba(63, 90, 243, 0.4) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  width: 37px;
+  height: 10px;
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  top: 50%;
+  left: -52px;
+  transform: translateY(-50%);
+  /* margin-right: 50px; */
+  /* padding-right: 60px; */
+}
