--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,32 @@
   @apply max-w-7xl mx-auto;
 }
 
+/* custom font  */
+/* app/globals.css */
+
+@font-face {
+  font-family: "Plus Jakarta Sans";
+  src: url("/fonts/jak.woff2") format("woff2"),
+    /* optional but recommended */ url("/fonts/jak.ttf") format("truetype");
+  font-weight: 400; /* change if your file is bold/variable */
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: "Plus Jakarta Sans", sans-serif !important;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Plus Jakarta Sans", sans-serif !important;
+}
+
+.ghost_fnt {
+  font-family: Arial, sans-serif;
+}
 /* page banner section */
 .pg_header {
   position: relative;
@@ -160,15 +186,23 @@
 }
 
 /* about page design */
+.abt_box {
+  position: relative;
+  height: 650px;
+  max-width: 600px;
+  width: 100%;
+  position: relative;
+}
 .img1 {
-  /* position: absolute;
+  position: absolute;
   top: 0;
-  left: 0; */
+  left: 0;
   max-width: 430px;
   width: 100%;
   height: 480px;
 }
-.image_2 {
+
+.img2 {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -176,7 +210,12 @@
   width: 100%;
   height: 390px;
 }
-.img2 {
+.img1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.img2 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -256,6 +295,7 @@
   font-weight: 700;
   line-height: 1;
   z-index: 0;
+  padding-top: 9px;
 }
 
 .bg_shape {
@@ -264,6 +304,97 @@
   left: 0;
   z-index: -1;
 }
+
+.stroke_txt {
+  color: white;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--rr-color-common-white);
+}
+
+.simple_txt {
+  color: white;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.overly::before {
+  background-color: #a868fa;
+  mix-blend-mode: multiply;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* mission and vision section */
+
+.ab_ttl {
+  display: block;
+
+  text-transform: inherit;
+  position: relative;
+  overflow: hidden;
+  color: #11151c;
+}
+.about-tabs-list {
+  border-radius: none !important;
+}
+
+.shape {
+  position: absolute;
+  z-index: -1;
+}
+
+.shape.shp_1 {
+  top: -10%;
+  right: 10%;
+}
+.shape.shp_2 {
+  top: 5%;
+  right: -15%;
+}
+.abt_img {
+  position: relative;
+  padding-bottom: 70px;
+}
+.pos {
+  position: relative;
+  width: 80%;
+  height: 80%;
+  overflow: hidden;
+}
+.rimg1 {
+  height: 490px;
+  max-width: 505px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.right_img2 {
+  max-width: 323px;
+  width: 100%;
+  height: 338px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.rimg2 {
+  border-top: 10px solid #02050a;
+  border-left: 10px solid #02050a;
+  object-fit: cover !important;
+  height: 100%;
+  width: 100%;
+}
+/* .pos img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transform-origin: left;
+} */
 @media screen and (max-width: 768px) {
   .lg_txt {
     color: #f8f8f8;
@@ -271,7 +402,7 @@
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: #e8e9ef;
     width: 100%;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 700;
     line-height: 1;
     z-index: 0;
