--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -346,9 +346,22 @@ h5 {
 
 .shape {
   position: absolute;
-  z-index: -1;
+}
+.ab_shape1 {
+  max-width: 216px;
+  width: 100%;
+  height: 185px;
+  top: 50px;
+  left: -25%;
 }
 
+.ab_shape2 {
+  max-width: 340px;
+  width: 100%;
+  height: 340px;
+  top: 100px;
+  left: -20%;
+}
 .shape.shp_1 {
   top: -10%;
   right: 10%;
