--- a/src/components/modules/services/serviceCard/serviceCard.css
+++ b/src/components/modules/services/serviceCard/serviceCard.css
@@ -1,135 +1,70 @@
-/* services section */
+.flip-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.flip-face {
+  width: 100%;
+  height: 100%;
+}
+.flip-face.front,
+.flip-face.back {
+  display: block;
+  position: relative;
+  border-radius: inherit;
+}
+.flip-face.back {
+  background: #d6b981;
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15);
+}
+.serviceCard__thumb {
+  position: relative;
+  overflow: hidden;
+}
+.serviceCard__thumb .front {
+  cursor: pointer;
+}
+.flip-face {
+  width: 100%;
+  height: 263px;
+}
+.serviceCard__img {
+  height: 230px;
+}
+.flip-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.flip-face.front,
+.flip-face.back {
+  display: block;
+  position: relative;
+  border-radius: inherit;
+}
+.flip-face.back {
+  background: #d6b981;
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15);
+}
+.serviceCard__thumb {
+  position: relative;
+  overflow: hidden;
+}
+.flip-face {
+  width: 100%;
+  height: 230px;
+}
+.flip-face.back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .sttl {
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 700;
   color: #2d343e;
   text-transform: uppercase;
   margin-bottom: 20px;
   display: block;
-}
-
-.serviceCard__thumb {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.serviceCard__overlay {
-  background: #001695;
-  mix-blend-mode: multiply;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  z-index: 2;
-}
-
-.trans_shape {
-  width: 255px;
-  height: 255px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  z-index: 2;
-}
-.serviceCard__thumb img {
-  height: 360px;
-  width: 100%;
-  object-fit: cover;
-  z-index: -1;
-  position: relative;
-}
-.serviceCard__icon {
-  background-color: white;
-  height: 80px;
-  width: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 30px;
-  left: 15px;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 2;
-}
-.rotate {
-  transform: rotate(-45deg);
-  font-size: 16px;
-}
-.serviceCard__btn {
-  background-color: #a868fa;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 10px;
-  font-size: 16px;
-  font-weight: 600;
-  position: absolute;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% - 60px);
-  padding: 14.5px 0;
-  visibility: hidden;
-  transition: all 0.4s ease-in-out;
-  opacity: 0;
-  z-index: 2;
-}
-
-.serviceCard:hover .serviceCard__title a {
-  color: #a868fa;
-}
-.serviceCard {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-.serviceCard:hover .serviceCard__thumb .serviceCard__btn {
-  visibility: visible;
-  opacity: 1;
-  bottom: 30px;
-}
-.serviceCard:hover .trans_shape {
-  visibility: visible;
-  opacity: 1;
-}
-
-.serviceCard:hover .serviceCard__icon {
-  left: 30px;
-  visibility: visible;
-  opacity: 1;
-}
-
-@media screen and (max-width: 768px) {
-  .sttl {
-    color: #2d343e;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    font-size: 23px;
-    font-weight: 700;
-    display: block;
-  }
 }
